--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="wait">Wait</string>
     <string name="messege_server">Waiting for connections...</string>
-
     <string name="acao_iniciar_servidor">Iniciar servidor</string>
     <string name="acao_iniciar_cliente">Iniciar cliente</string>
     <string name="msg_erro_bt_indisponivel">Aparelho não suporta Bluetooth</string>
@@ -19,5 +18,6 @@
     <string name="msg_desconectou">Conexão encerrada</string>
     <string name="title_activity_lista_devices">ListaDevices</string>
     <string name="erro_save_image">Não foi possível salvar a imagem</string>
+    <string name="title_activity_splash">SplashActivity</string>
 
 </resources>
