--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="wait">Wait</string>
     <string name="messege_server">Waiting for connections...</string>
-    <string name="acao_iniciar_servidor">Iniciar servidor</string>
-    <string name="acao_iniciar_cliente">Iniciar cliente</string>
+    <string name="acao_iniciar_servidor">Ajuda</string>
+    <string name="acao_iniciar_cliente">Sobre</string>
     <string name="msg_erro_bt_indisponivel">Aparelho não suporta Bluetooth</string>
     <string name="msg_procurando_dispositivos">Procurando dispositivos...</string>
     <string name="msg_ativar_bluetooth">Você deve ativar o Bluetooth para continuar.</string>
