--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,22 +2,22 @@
 <resources>
 
     <string name="app_name">Selfie Studio</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_mode">SELECIONE O MODO DE FUNCIONAMENTO</string>
+    <string name="back">Voltar</string>
     <string name="action_settings">Settings</string>
-    <string name="wait">Wait</string>
-    <string name="messege_server">Waiting for connections...</string>
     <string name="acao_iniciar_servidor">Ajuda</string>
     <string name="acao_iniciar_cliente">Sobre</string>
     <string name="msg_erro_bt_indisponivel">Aparelho não suporta Bluetooth</string>
-    <string name="msg_procurando_dispositivos">Procurando dispositivos...</string>
+    <string name="msg_procurando_dispositivos">Procurando dispositivos…</string>
     <string name="msg_ativar_bluetooth">Você deve ativar o Bluetooth para continuar.</string>
     <string name="msg_aparelho_invisivel">Para iniciar o servidor, seu aparelho deve estar visível.</string>
     <string name="aparelhos_encontrados">Aparelhos encontrados</string>
     <string name="aguarde">Aguarde</string>
-    <string name="mensagem_servidor">Aguardando por conexões...</string>
+    <string name="mensagem_servidor">Aguardando por conexões…</string>
     <string name="msg_desconectou">Conexão encerrada</string>
-    <string name="title_activity_lista_devices">ListaDevices</string>
     <string name="erro_save_image">Não foi possível salvar a imagem</string>
-    <string name="title_activity_splash">SplashActivity</string>
+    <string name="app_dev">Aplicativo desenvolvido pelo EmbeddedLab por:</string>
+    <string name="app_team">Claudivan Filho \n Diego Ernesto \n Lucas Ribeiro \n Mônica Cavalcante \n Nicolas Gabriel</string>
+
 
 </resources>
